fixes grey border on primary button :active in dark modes

--- a/src/buttons/button.scss
+++ b/src/buttons/button.scss
@@ -132,6 +132,7 @@
   &[aria-selected=true] {
     background-color: var(--color-btn-primary-selected-bg);
     box-shadow: var(--color-btn-primary-selected-shadow);
+    border-color: var(--color-btn-primary-border);
   }
 
   &:disabled,
